Issue #SB-25202 Correction of alignment issues and styling modal in Portal

--- a/src/app/client/src/assets/styles/components/_modal.scss
+++ b/src/app/client/src/assets/styles/components/_modal.scss
@@ -185,6 +185,10 @@
       }
     }
   }
+
+  .modals.dimmer .ui.scrolling.modal {
+    position: fixed !important;
+  }
 }
 
 [dir="rtl"] .sb-modal {
@@ -322,3 +326,4 @@
     }
   }
 }
+
